--- a/public/css/index.css
+++ b/public/css/index.css
@@ -145,24 +145,43 @@ body {
     font-size: 16px;
     margin-top: 3%;
 }
-#instruções{
-max-width: 1300px;
-margin-left: auto;
-margin-right: auto;
-width: 100%;
-font-size: 16px;
-margin-top: 3%;    
+
+#instruções {
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    font-size: 16px;
+    margin-top: 3%;
 }
 
-#denuncia{
-    background: none;
-    color: #000;
-    font-size: 30px;
-}
-
-.seta{
+.seta {
     background: none;
     color: #000;
     font-size: 155px;
     font-family: 'Cinzel', serif;
+}
+
+#pet {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card{
+    display:flex;
+    flex-direction: column;
+    width: 250px;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.card h1{
+    font-size: 120%;
+}
+
+a.card p{
+    color: #282828;
 }
