--- a/public/css/index.css
+++ b/public/css/index.css
@@ -166,3 +166,10 @@ margin-top: 3%;
     font-size: 155px;
     font-family: 'Cinzel', serif;
 }
+
+.img-pet {
+    width: 400px;
+    height: 250px;
+    object-fit: contain;
+    margin: auto;
+}
