--- a/public/css/flex-style.css
+++ b/public/css/flex-style.css
@@ -31,7 +31,7 @@ body {
     background-color: #F5F5F5;
     color: var(--main-txt-color);
     font-size: 100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cinzel', sans-serif;
     scroll-behavior: smooth;
     font-weight: normal;
 }
